# gpu_voxels

./: README.md
gpu_collision_check/: CMakeLists.txt  package.xml
gpu_collision_check/config/: kinect_asus.yaml  kinect_asus_rosbag.rviz  kinects.yaml  kinects_kuka.yaml  kuka_voxels_1cm.xml  kuka_voxels_2_5cm.xml  kuka_voxels_2cm.xml  kuka_voxels_3cm.xml  kuka_voxels_5cm.xml  merged_kinects.rviz  two_kinects.rviz
gpu_collision_check/include/gpu_collision_check/gpu_collision/: collision_algorithms_voxels.h  insert_robot_voxels.h  insert_scene_voxels.h
gpu_collision_check/include/gpu_collision_check/kinects/: merge_point_clouds.h
gpu_collision_check/launch/: kinects_gazebo.launch  kr10_gazebo_moveit.launch  tf_broadcaster.launch
gpu_collision_check/src/gpu_collision/: CollisionAlgorithmsVoxels.cpp  CollisionMain.cpp  InsertRobotVoxels.cpp  InsertSceneVoxels.cpp
gpu_collision_check/src/kinects/: BroadcastKinectTF.cpp  MergeKinects.cpp  MergeKinectsMain.cpp
gpu_collision_check/src/path_planner/: PlanPathMain.cpp
gpu_collision_check/srv/: TrajectoryForCollision.srv
gpu_collision_check/urdf/: kuka_kr10.urdf  kuka_kr10_tool.urdf
gpu_collision_check/worlds/: test.world  two_kinects.world  two_kinects_kuka.world
helpers_gpu_voxels/: CMakeLists.txt  package.xml
helpers_gpu_voxels/config/: urdf_gui.rviz
helpers_gpu_voxels/include/helpers_gpu_voxels/: bb_cuda.h  path_planner_voxels.h
helpers_gpu_voxels/include/helpers_gpu_voxels/cuda/: helper_cuda.h
helpers_gpu_voxels/include/helpers_gpu_voxels/timer/: timer_wrapper.h
helpers_gpu_voxels/launch/: urdf_parser.launch  urdf_rviz.launch
helpers_gpu_voxels/scripts/: boundingBoxGenerator.py  experimentRAL.py  pickAndPlace.py
helpers_gpu_voxels/src/: BBcuda.cu  CUDAinfo.cpp  PathPlannerVoxels.cpp  TimerWrapper.cpp  URDFparser.cpp
moveit_kuka/: .setup_assistant  CMakeLists.txt  package.xml
moveit_kuka/config/: fake_controllers.yaml  kuka_kr10.srdf  ompl_planning.yaml  ros_controllers.yaml
moveit_kuka/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kuka_kr10_moveit_controller_manager.launch.xml  move_group.launch  moveitWithGUI.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pcl_model/: CMakeLists.txt  package.xml
pcl_model/config/asus/: kameraPointCloud.pcd  robotModel.pcd
pcl_model/config/kinect/: kameraPointCloud.pcd
pcl_model/include/pcl_model/: cut_robot_out.h  get_pointcloud_kinect.h  kinect_registration.h
pcl_model/launch/: pointClouds.launch
pcl_model/src/: CutRobotMain.cpp  GetPointCloudMain.cpp  KinectRegistrationMain.cpp
pcl_model/src/lib/: CutRobotOut.cpp  GetPointCloudKinect.cpp  KinectRegistration.cpp
