<?xml version="1.0"?>
<package format="2">
  <!-- package info -->
  <name>gpu_collision_check</name>
  <version>0.0.0</version>
  <description>The gpu_collision_check package</description>

  <!-- author and maintainer -->
  <maintainer email="fran.jurican@fer.hr"> Fran Jurican </maintainer>

  <!-- license -->
  <license>TODO</license>

  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>helpers_gpu_voxels</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>topp_ros</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>helpers_gpu_voxels</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>helpers_gpu_voxels</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>topp_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
