<?xml version="1.0"?>
<package format="2">
  <name>pcl_model</name>
  <version>0.0.0</version>
  <description>The pcl_model package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="franjurican@todo.todo">franjurican</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
</package>
